kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-hospital
  labels:
    app.kubernetes.io/part-of: smart-hospital
    environment: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/part-of: smart-hospital
    purpose: monitoring
